force-app/main/default/objects/Lead/fields/jaEsteveEmBatalha__c.field-meta.xml
<CustomField>
    <fullName>jaEsteveEmBatalha__c</fullName>
    <description>Informar se o candidato já possui experiência em batalha,</description>
    <inlineHelpText>Marque se já possui alguma experiência em batalha,</inlineHelpText>
    <label>Já esteve em batalha ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Não Sei</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>