force-app/main/default/objects/Lead/fields/Nomeheroi__c.field-meta.xml
<CustomField>
    <fullName>Nomeheroi__c</fullName>
    <description>Nome  de super herói ou nome de guerra.</description>
    <inlineHelpText>Nome usado nas batalhas</inlineHelpText>
    <label>Nome de Herói</label>
    <length>50</length>
    <type>Text</type>
</CustomField>