force-app/main/default/objects/Lead/fields/Quantas_batalhas__c.field-meta.xml
<CustomField>
    <fullName>Quantas_batalhas__c</fullName>
    <description>Informar quantas batalhas os possíveis heróis já enfrentaram.</description>
    <inlineHelpText>Preencha o número de batalhas que já enfrentou.</inlineHelpText>
    <label>Quantas batalhas</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>