force-app/main/default/objects/Lead/validationRules/ExigeNumeroDebatalhas.validationRule-meta.xml
<ValidationRule>
    <fullName>ExigeNumeroDebatalhas</fullName>
    <active>true</active>
    <description>Exige números de batalhas quando ele batalhou.</description>
    <errorConditionFormula>ISPICKVAL( jaEsteveEmBatalha__c , &quot;Sim&quot;)&amp;&amp;   ISBLANK(Quantas_batalhas__c )</errorConditionFormula>
    <errorDisplayField>Quantas_batalhas__c</errorDisplayField>
    <errorMessage>Por favor preencher o quantidade de batalhas.</errorMessage>
</ValidationRule>