force-app/main/default/objects/Lead/validationRules/ExigePlanetaQuandoNaoETerraquio.validationRule-meta.xml
<ValidationRule>
    <fullName>ExigePlanetaQuandoNaoETerraquio</fullName>
    <active>true</active>
    <description>Formula para validar o preenchimento do campo &quot;Planeta&apos;.</description>
    <errorConditionFormula>NOT(isTerraquio__c) &amp;&amp;  ISBLANK( Planeta__c )</errorConditionFormula>
    <errorDisplayField>Planeta__c</errorDisplayField>
    <errorMessage>Favor preencher esse campo, possível herói não é da terra</errorMessage>
</ValidationRule>